File Upload and Downlaod against tasks is now functional.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/File/Download.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/File/Download.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/File/Download/{id}"
+﻿@page "/File/Download/{id}/{versionid}"
 @model PanacheSoftware.UI.Client.Blazor.Pages.File.DownloadModel
 @{
 }
