--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
@@ -163,7 +163,9 @@
         textCodes.Add(10112);
         textCodes.Add(10200);
         textCodes.Add(10201);
+        textCodes.Add(10206);
         textCodes.Add(10218);
+        textCodes.Add(10221);
         textCodes.Add(10222);
         textCodes.Add(10223);
         textCodes.Add(10224);
