--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/AlertComponent/PLSnackBar.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/AlertComponent/PLSnackBar.razor
@@ -23,4 +23,11 @@
         else
             errorSnackBar.Show();
     }
+
+    public void HideSnackBar()
+    {
+        successSnackBar.Hide();
+        errorSnackBar.Hide();
+        StateHasChanged();
+    }
 }
