--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupEdit/CustomFieldGroupValueEdit.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupEdit/CustomFieldGroupValueEdit.razor
@@ -94,6 +94,11 @@
         SavingFieldGroup = false;
     }
 
+    private void HideMessages()
+    {
+        plAlert.HideAlert();
+    }
+
     private async Task<Tuple<bool, string>> SaveCustomFieldValuesAsync()
     {
         if (CustomFieldRows.Any())
