--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupLinks/CustomFieldGroupLink.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/CustomFieldGroupLinks/CustomFieldGroupLink.razor
@@ -204,6 +204,18 @@
         return false;
     }
 
+    public void ResetCustomFieldGroupLinks()
+    {
+        HideMessages();
+        customFieldGroupLnkList.CustomFieldGroupLinks = new List<CustomFieldGroupLnk>();
+        StateHasChanged();
+    }
+
+    private void HideMessages()
+    {
+        plAlert.HideAlert();
+    }
+
     private async Task SaveFieldGroupLinks()
     {
         SavingFieldGroup = true;
