--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemView.razor
@@ -53,6 +53,9 @@
                         }
                     </Paragraph>
                 </Column>
+                <Column ColumnSize="ColumnSize.Is6">
+                    <FileLinks linkId="@taskHead.Id" linkType="@LinkTypes.Task" />
+                </Column>
             </Row>
             <Row>
                 <Column ColumnSize="ColumnSize.Is12">
