--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -22,6 +22,7 @@
 @using PanacheSoftware.UI.Client.Blazor.Shared.CustomFieldGroupEdit
 @using PanacheSoftware.UI.Client.Blazor.Shared.TaskList
 @using PanacheSoftware.UI.Client.Blazor.Shared.AlertComponent
+@using PanacheSoftware.UI.Client.Blazor.Shared.FileStore
 @using PanacheSoftware.UI.Client.Blazor.Pages.Dashboard
 @using PanacheSoftware.UI.Client.Blazor.Pages.Client
 @using PanacheSoftware.UI.Client.Blazor.Pages.Team
