--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileLink.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileLink.razor
@@ -5,7 +5,7 @@
 @using PanacheSoftware.Core.Domain.API.File
 
 <br />
-<FileHistory fileHead="@fileHead" linkId="@linkId" linkType="@linkType"/>
+@*<FileHistory fileHead="@fileHead" linkId="@linkId" linkType="@linkType"/>*@
 @if (!string.IsNullOrWhiteSpace(@fileHead.FileVersions.OrderByDescending(v => v.VersionNumber).FirstOrDefault().URI))
 {
     <Blazorise.Link To="@fileHead.FileVersions.OrderByDescending(v => v.VersionNumber).FirstOrDefault().URI" Target="Target.Blank">
@@ -18,24 +18,26 @@ else
         @fileHead.FileDetail.FileTitle
     </Blazorise.Link>
 }
+    &nbsp;
 @switch (fileHead.FileDetail.FileExtension)
 {
     case ".pdf":
-        <Icon Name="IconName.FilePdf" />
+        <Icon Name="IconName.FilePdf" IconSize="IconSize.Large" />
         break;
     case ".docx":
     case ".doc":
-        <Icon IconName="@("fa-file-word")" Class="fa-fw" />
+        <Icon Name="Blazorise.Icons.FontAwesome.FontAwesomeIcons.FileWord" IconSize="IconSize.Large"  />
         break;
     case "URI":
-        <Icon IconName="@("fa-link")" Class="fa-fw" />
+        <Icon Name="Blazorise.Icons.FontAwesome.FontAwesomeIcons.Link" IconSize="IconSize.Large" />
         break;
     default:
-        <Icon IconName="@("fa-file")" Class="fa-fw" />
+        <Icon Name="Blazorise.Icons.FontAwesome.FontAwesomeIcons.File" IconSize="IconSize.Large" />
         break;
 }
 
 @code {
+
     [CascadingParameter]
     LangQueryList langQueryList { get; set; }
 
@@ -55,6 +57,6 @@ else
         if (fileHead == default)
             return string.Empty;
 
-        return $"/File/Download/{fileHead.FileVersions.OrderByDescending(v => v.VersionNumber).FirstOrDefault().Id}";
+        return $"/File/Download/{fileHead.Id}/{fileHead.FileVersions.OrderByDescending(v => v.VersionNumber).FirstOrDefault().Id}";
     }
 }
